--- a/action.yml
+++ b/action.yml
@@ -15,6 +15,10 @@ inputs:
 runs:
   using: composite
   steps:
+    - uses: actions/setup-python@v4
+      with:
+        python-version: "3.10"
+
     - run: python -m pip install build twine check-wheel-contents wheel
       shell: bash
 
