--- a/action.yml
+++ b/action.yml
@@ -18,8 +18,9 @@ runs:
     - uses: actions/setup-python@v4
       with:
         python-version: "3.10"
+        cache: pip
 
-    - run: python -m pip install build twine check-wheel-contents wheel
+    - run: python -m pip install -r requirements.txt
       shell: bash
 
     # Build SDist, then build wheel out of it.
