--- a/action.yml
+++ b/action.yml
@@ -20,7 +20,7 @@ runs:
         python-version: "3.10"
         cache: pip
 
-    - run: python -m pip install -r requirements.txt
+    - run: python -m pip install -r ./requirements.txt
       shell: bash
 
     # Build SDist, then build wheel out of it.
