Move to pip-compile w/ own updates
Couldn't figure out how dependabot works with pip-compile and the bug
reports are discouraging.

Source of the update workflow:
https://www.oddbird.net/2022/06/01/dependabot-single-pull-request/

?

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,11 +3,7 @@
 
 version: 2
 updates:
-  - package-ecosystem:
-    directory: "/"
-    schedule:
-      interval: "weekly"
   - package-ecosystem: github-actions
-    directory: "/"
+    directory: /
     schedule:
-      interval: "weekly"
+      interval: monthly
