--- a/action.yml
+++ b/action.yml
@@ -19,8 +19,9 @@ runs:
       with:
         python-version: "3.10"
         cache: pip
+        cache-dependency-path: "**/tools.txt"
 
-    - run: python -m pip install -r ${{ github.action_path }}/requirements.txt
+    - run: python -m pip install -r ${{ github.action_path }}/requirements/tools.txt
       shell: bash
 
     # Build SDist, then build wheel out of it.
