Make twine strict
Co-authored-by: Sviatoslav Sydorenko <578543+webknjaz@users.noreply.github.com>

--- a/action.yml
+++ b/action.yml
@@ -46,7 +46,7 @@ runs:
 
     - name: Check PyPI README
       shell: bash
-      run: python -m twine check dist/*
+      run: python -m twine check --strict dist/*
       working-directory: ${{ inputs.path }}
 
     - name: Show wheel & SDist contents hierarchically.
