--- a/action.yml
+++ b/action.yml
@@ -18,6 +18,8 @@ runs:
     - uses: actions/setup-python@v4
       with:
         python-version: "3.10"
+        cache: pip
+        cache-dependency-path: "${{ github.action_path }}/requirements/tools.txt"
 
     - name: Create venv for tools
       run: python3.10 -m venv /tmp/baipp
