--- a/action.yml
+++ b/action.yml
@@ -15,6 +15,11 @@ inputs:
 runs:
   using: composite
   steps:
+    - name: Resolve tools path
+      shell: bash
+      run: |
+         python -c "import os; print(os.path.abspath('${{ github.action_path }}'))"
+
     - uses: actions/setup-python@v4
       with:
         python-version: "3.10"
