--- a/action.yml
+++ b/action.yml
@@ -18,13 +18,13 @@ runs:
     - name: Resolve tools path
       shell: bash
       run: |
-         python -c "import os; print(os.path.abspath('${{ github.action_path }}'))"
+         python -c "import os; print(os.path.abspath('BAIPP_HOME=${{ github.action_path }}'))" >> $GITHUB_ENV
 
     - uses: actions/setup-python@v4
       with:
         python-version: "3.10"
         cache: pip
-        cache-dependency-path: "${{ github.action_path }}/requirements/tools.txt"
+        cache-dependency-path: "${{ env.BAIPP_HOME }}/requirements/tools.txt"
 
     - name: Create venv for tools
       run: python3.10 -m venv /tmp/baipp
