--- a/action.yml
+++ b/action.yml
@@ -18,8 +18,8 @@ runs:
     - name: Resolve tools path
       shell: bash
       run: |
-         python -c "import os; print(os.path.abspath('BAIPP_HOME=${{ github.action_path }}'))" >> $GITHUB_ENV
-         cat $GITHUB_ENV
+        python -c "import os; print('BAIPP_HOME=%s' % (os.path.abspath('${{ github.action_path }}',)))" >> $GITHUB_ENV
+        cat $GITHUB_ENV
 
     - run: ls -al ${{ env.BAIPP_HOME }}
       shell: bash
