--- a/action.yml
+++ b/action.yml
@@ -15,24 +15,15 @@ inputs:
 runs:
   using: composite
   steps:
-    - name: Resolve tools path
-      shell: bash
-      run: |
-        # See https://github.com/hynek/build-and-inspect-python-package/pull/6
-        # why this is necessary.
-        python -c "import os; print('BAIPP_HOME=%s' % (os.path.abspath('${{ github.action_path }}',)))" >> $GITHUB_ENV
-
     - uses: actions/setup-python@v4
       with:
         python-version: "3.10"
-        cache: pip
-        cache-dependency-path: "${{ env.BAIPP_HOME }}/requirements/tools.txt"
 
     - name: Create venv for tools
       run: python3.10 -m venv /tmp/baipp
       shell: bash
 
-    - run: /tmp/baipp/bin/python -m pip install -r ${{ env.BAIPP_HOME }}/requirements/tools.txt
+    - run: /tmp/baipp/bin/python -m pip install -r ${{ github.action_path }}/requirements/tools.txt
       shell: bash
 
     # Build SDist, then build wheel out of it.
