Add dist output (#9)
* Add dist output

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* One RTFM later...

Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,5 +27,8 @@ jobs:
           path: action
 
       - uses: ./action
+        id: baipp
         with:
           path: structlog
+
+      - run: echo Packages can be found at ${{ steps.baipp.outputs.dist }}
