--- a/action.yml
+++ b/action.yml
@@ -71,22 +71,16 @@ runs:
         tar xf *.tar.gz -C out/sdist
 
         echo -e '\n<details><summary>SDist contents</summary>\n' >> $GITHUB_STEP_SUMMARY
-        echo '```' >> $GITHUB_STEP_SUMMARY
-        (cd /tmp/baipp/dist/out/sdist && tree -a * | tee -a $GITHUB_STEP_SUMMARY)
-        echo '```' >> $GITHUB_STEP_SUMMARY
+        (cd /tmp/baipp/dist/out/sdist && tree -a * | sed 's/^/    /' | tee -a $GITHUB_STEP_SUMMARY)
         echo -e '\n</details>\n' >> $GITHUB_STEP_SUMMARY
 
         echo -e '\n<details><summary>Wheel contents</summary>\n' >> $GITHUB_STEP_SUMMARY
-        echo '```' >> $GITHUB_STEP_SUMMARY
-        (cd /tmp/baipp/dist/out/wheels && tree -a * | tee -a $GITHUB_STEP_SUMMARY)
-        echo '```' >> $GITHUB_STEP_SUMMARY
+        (cd /tmp/baipp/dist/out/wheels && tree -a * | sed 's/^/    /' | tee -a $GITHUB_STEP_SUMMARY)
         echo -e '\n</details>\n' >> $GITHUB_STEP_SUMMARY
 
         echo ----- Metadata Follows -----
         echo -e '\n<details><summary>Metadata</summary>\n' >> $GITHUB_STEP_SUMMARY
-        echo '```' >> $GITHUB_STEP_SUMMARY
-        cat out/sdist/*/PKG-INFO | tee -a $GITHUB_STEP_SUMMARY
-        echo '```' >> $GITHUB_STEP_SUMMARY
+        cat out/sdist/*/PKG-INFO | sed 's/^/    /' | tee -a $GITHUB_STEP_SUMMARY
         echo -e '\n</details>\n' >> $GITHUB_STEP_SUMMARY
         echo ----- End of Metadata  -----
 
