--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,7 @@ jobs:
           path: structlog
 
       - run: echo Packages can be found at ${{ steps.baipp.outputs.dist }}
+      - run: ln -l ${{ steps.baipp.outputs.dist }}/**
 
   check-argon2-cffi-bindings:
     name: Build & verify the argon2-cffi-bindings package.
