--- a/.github/workflows/upgrade-dependencies.yml
+++ b/.github/workflows/upgrade-dependencies.yml
@@ -15,6 +15,7 @@ jobs:
 
       - uses: pdm-project/update-deps-action@v1.1
         with:
+          commit-message: Update dependencies
           update-strategy: all
 
       - uses: pdm-project/setup-pdm@v3
