--- a/action.yml
+++ b/action.yml
@@ -33,16 +33,18 @@ runs:
       # We use $GITHUB_ACTION_PATH to support elderly GitHub Enterprise Servers.
       run: >
         /tmp/baipp/bin/python
-        -Im pip install
-        -r $GITHUB_ACTION_PATH/requirements/tools.txt
+        -Im pip
+        --disable-pip-version-check
+        --no-python-version-warning
+        install -r $GITHUB_ACTION_PATH/requirements/tools.txt
       shell: bash
 
     # Build SDist, then build wheel out of it.
-    - run: |
-        # Set 'SOURCE_DATE_EPOCH' based on the last commit for build
-        # reproducibility.
-        SOURCE_DATE_EPOCH=$(git log -1 --pretty=%ct) \
-          /tmp/baipp/bin/python -m build --outdir /tmp/baipp/dist
+    # Set 'SOURCE_DATE_EPOCH' based on the last commit for build
+    # reproducibility.
+    - run: >
+        SOURCE_DATE_EPOCH=$(git log -1 --pretty=%ct)
+        /tmp/baipp/bin/python -m build --outdir /tmp/baipp/dist
       shell: bash
       working-directory: ${{ inputs.path }}
 
@@ -69,7 +71,11 @@ runs:
     - name: Check PyPI README
       shell: bash
       working-directory: ${{ inputs.path }}
-      run: /tmp/baipp/bin/python -m twine check --strict /tmp/baipp/dist/*
+      run: >
+        /tmp/baipp/bin/python
+        -m twine check
+        --strict
+        /tmp/baipp/dist/*
 
     - name: Show wheel & SDist contents hierarchically, including metadata.
       shell: bash
