--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,6 +62,8 @@ jobs:
         runner-version:
         - "2.289.4"
         - "2.296.2"
+        - "2.302.1"
+      fail-fast: false
     runs-on: ubuntu-latest
 
     steps:
@@ -82,14 +84,14 @@ jobs:
       
       - name: Test against actions/runner ${{ matrix.runner-version }}
         run: |
-          ../runner.server/Runner.Client workflow_dispatch -W .github/workflows/ci.yml --var SKIP_CHECK_OLD_ACTIONS_RUNNER=true -P ubuntu-latest=-self-hosted -s GITHUB_TOKEN --runner-version ${{ matrix.runner-version }}
+          ../runner.server/Runner.Client workflow_dispatch -W .github/workflows/ci.yml --var SKIP_CHECK_OLD_ACTIONS_RUNNER=true -s ACTIONS_STEP_DEBUG=true -P ubuntu-latest=-self-hosted -s GITHUB_TOKEN --runner-version ${{ matrix.runner-version }}
         working-directory: action
         env:
           GITHUB_TOKEN: ${{ github.token }}
       
       - name: Test against job container on actions/runner ${{ matrix.runner-version }}
         run: |
-          ../runner.server/Runner.Client workflow_dispatch -W .github/workflows/ci.yml --var SKIP_CHECK_OLD_ACTIONS_RUNNER=true -P ubuntu-latest=catthehacker/ubuntu:act-latest -s GITHUB_TOKEN --runner-version ${{ matrix.runner-version }}
+          ../runner.server/Runner.Client workflow_dispatch -W .github/workflows/ci.yml --var SKIP_CHECK_OLD_ACTIONS_RUNNER=true -s ACTIONS_STEP_DEBUG=true -P ubuntu-latest=catthehacker/ubuntu:act-latest -s GITHUB_TOKEN --runner-version ${{ matrix.runner-version }}
         working-directory: action
         env:
           GITHUB_TOKEN: ${{ github.token }}
