Take advantage of my favorite PEP
…whose number I keep forgetting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,5 @@ dependencies = [
     "twine>=4.0.2",
     "wheel>=0.38.4",
 ]
-license = { text = "MIT" }
+license = "MIT"
 requires-python = ">=3.10"
