--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,10 @@
+[build-system]
+requires = ["pdm-pep517"]
+build-backend = "pdm.pep517.api"
+
+[tool.pdm.scripts]
+build = "python -Im build"
+
 [project]
 name = "build-and-inspect-python-package"
 version = "0" # we're not an actual package.
