--- a/action.yml
+++ b/action.yml
@@ -25,7 +25,7 @@ runs:
     - uses: pdm-project/setup-pdm@v3
       with:
         python-version: 3.x
-        cache: true
+        cache: false
 
     - name: Create venv for tools
       shell: bash
