--- a/action.yml
+++ b/action.yml
@@ -43,11 +43,12 @@ runs:
     # Set 'SOURCE_DATE_EPOCH' based on the last commit for build
     # reproducibility.
     - run: >
-        pwd
+        project = $(pwd)
         ls -a
+        echo proj: $project
 
         SOURCE_DATE_EPOCH=$(git log -1 --pretty=%ct)
-        pdm run --project ${{ github.action_path }} build --outdir /tmp/baipp/dist
+        pdm run --project ${{ github.action_path }} build --outdir /tmp/baipp/dist $project
       shell: bash
       working-directory: ${{ inputs.path }}
 
