--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,9 @@ build-backend = "pdm.pep517.api"
 
 [tool.pdm.scripts]
 build = "python -Im build"
+check-wheel-contents = "python -Im check_wheel_contents"
+check-readme = "python -Im twine check --strict /tmp/baipp/dist/*"
+wheel = "python -Im wheel"
 
 [project]
 name = "build-and-inspect-python-package"
@@ -16,5 +19,5 @@ dependencies = [
     "twine>=4.0.2",
     "wheel>=0.38.4",
 ]
-license = {text = "MIT"}
+license = { text = "MIT" }
 requires-python = ">=3.10"
