--- a/action.yml
+++ b/action.yml
@@ -20,6 +20,7 @@ runs:
   using: composite
   steps:
     - name: Resolve Lock Path
+      shell: bash
       run: echo "PDM_CACHE=$(realpath ${{ github.action_path }}/pdm.lock)" >>$GITHUB_ENV
 
     - uses: pdm-project/setup-pdm@v3
