--- a/action.yml
+++ b/action.yml
@@ -26,6 +26,7 @@ runs:
     - uses: pdm-project/setup-pdm@v3
       with:
         python-version: 3.x
+        update-python: false
         cache: true
         cache-dependency-path: ${{ env.PDM_CACHE }}
 
