--- a/action.yml
+++ b/action.yml
@@ -33,6 +33,8 @@ runs:
     - name: Create venv for tools
       shell: bash
       run: |
+        cd ${{ github.action_path }}
+
         pdm sync
         pdm info --env
 
