--- a/action.yml
+++ b/action.yml
@@ -33,10 +33,8 @@ runs:
     - name: Create venv for tools
       shell: bash
       run: |
-        cd ${{ github.action_path }}
-
-        pdm sync
-        pdm info --env
+        pdm sync -p ${{ github.action_path }}
+        pdm info -p ${{ github.action_path }} --json
 
     # Build SDist, then build wheel out of it.
     # Set 'SOURCE_DATE_EPOCH' based on the last commit for build
